# Chemistry-app

./: .gitignore  README.md  pyproject.toml
api/: alembic.ini  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 4da0de5d7d7a_add_image_path_to_reagents.py  (+4 more)
api/controllers/: __init__.py  artist.py  instrument.py  reaction.py  reagent.py  scenario.py  scenario_run.py  scenario_screen.py  ui_scenario.py  ui_scenario_run.py
api/core/: config.py  database.py  dependencies.py  error_handlers.py  exceptions.py  templates.py
api/models/: __init__.py  artist.py  artist_timeline_entry.py  instrument.py  instrument_model.py  reaction.py  reaction_model.py  reaction_reagent.py  reaction_reagent_model.py  reagent.py  reagent_model.py  scenario.py  scenario_model.py  scenario_screen.py  scenario_screen_slider_image.py  scenario_step.py  scenario_step_model.py
api/routers/: __init__.py  artist.py  camera.py  health_router.py  instrument.py  markers.py  reaction.py  reagent.py  scenario.py  scenario_run.py  scenario_screen.py  ui_scenario.py  ui_scenario_run.py
api/schemas/: __init__.py  artist.py  instrument.py  reaction.py  reagent.py  scenario.py  scenario_run.py  scenario_run_ui.py  scenario_screen.py
api/services/: __init__.py  artist.py  instrument.py  reaction.py  reagent.py  scenario.py  scenario_run.py  scenario_screen.py  utils.py  utils_instruments.py
api/static/: animations.css  animations.js  styles.css
api/templates/: base.html
api/vision/: __init__.py  aruco_listener.py  camera_config.py  marker_generator.py
(+4 files in other folders)
